--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -53,6 +53,7 @@ body {
         color: $white;
         border-radius: 3px;
         cursor: pointer;
+        letter-spacing: 1px;
       }
       
       button:hover{
