--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 62.5%;
 }
 
@@ -56,6 +56,7 @@ body {
   color: #FFFFFF;
   border-radius: 3px;
   cursor: pointer;
+  letter-spacing: 1px;
 }
 .main .form .login button:hover {
   opacity: 0.8;
